--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,23 @@ plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jlleitschuh.gradle.ktlint' version "10.3.0" //ktlint
+    id 'io.gitlab.arturbosch.detekt' version "1.21.0-RC2" //detekt
+}
+
+allprojects{
+    apply{
+        plugin("org.jlleitschuh.gradle.ktlint") //ktlint
+        plugin("io.gitlab.arturbosch.detekt") //deteke
+    }
+
+    //for detekt
+    afterEvaluate{
+        detekt{
+            buildUponDefaultConfig = true
+            config.setFrom(files("$rootDir/teamConfig/detekt-config.yml"))
+        }
+    }
 }
 
 task clean(type: Delete) {
