--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 buildscript {
     ext {
         compose_version = '1.2.0'
+
+        hilt_version='2.38.1'
+        hilt_viewModel_version='1.0.0-alpha03'
+        hilt_navigation_compose_version='1.0.0'
+
     }
 
     dependencies{
