--- a/feature-splash/build.gradle
+++ b/feature-splash/build.gradle
@@ -66,4 +66,10 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:$hilt_viewModel_version"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewModel_version"
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version"
+
+    //tracing
+    implementation "androidx.tracing:tracing:$tracing_version"
+    implementation "androidx.tracing:tracing-ktx:$tracing_version"
+
+    implementation project (":core-navigation")
 }
