main화면 구현 및 몇가지 디펜던시 수정. 안쓰는 모듈(domain, data)삭제

--- a/feature-splash/build.gradle
+++ b/feature-splash/build.gradle
@@ -63,13 +63,13 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     //hilt viewModel
-    kapt "androidx.hilt:hilt-compiler:$hilt_viewModel_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewModel_version"
+    //kapt "androidx.hilt:hilt-compiler:$hilt_viewModel_version"
+    //implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewModel_version"
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version"
 
     //tracing
     implementation "androidx.tracing:tracing:$tracing_version"
     implementation "androidx.tracing:tracing-ktx:$tracing_version"
 
-    implementation project (":core-navigation")
+    compileOnly project (":core-navigation")
 }
