--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    gradle.projectsEvaluated{
+        tasks.withType(JavaCompile){
+            options.compilerArgs << "-Xmaxerrs" << "500"
+        }
+    }
     buildFeatures {
         compose true
     }
@@ -57,6 +62,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -74,16 +80,21 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     //hilt viewModel
-    kapt "androidx.hilt:hilt-compiler:$hilt_viewModel_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewModel_version"
+    //kapt "androidx.hilt:hilt-compiler:$hilt_viewModel_version"
+    //implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewModel_version"
+
+    //hilt navigation compose
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     //tracing
     implementation "androidx.tracing:tracing:$tracing_version"
     implementation "androidx.tracing:tracing-ktx:$tracing_version"
 
 
+    implementation project(":core-data")
+    implementation project(":core-model")
     implementation project(":core-navigation")
 
-    implementation project(":feature-splash")
     implementation project(":feature-main")
+    implementation project(":feature-splash")
 }
