--- a/feature-main/build.gradle
+++ b/feature-main/build.gradle
@@ -48,29 +48,44 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    //compose
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_runtime_compose_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
+
     //hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
     //hilt viewModel
-    kapt "androidx.hilt:hilt-compiler:$hilt_viewModel_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewModel_version"
+    //kapt "androidx.hilt:hilt-compiler:$hilt_viewModel_version"
+    //implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewModel_version"
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version"
 
     //tracing
     implementation "androidx.tracing:tracing:$tracing_version"
     implementation "androidx.tracing:tracing-ktx:$tracing_version"
 
-    implementation project (":core-navigation")
+    compileOnly project (":core-navigation")
+    compileOnly project (":core-model")
+    testImplementation project (":core-model")
+    androidTestImplementation project (":core-model")
+
+    compileOnly project (":core-data")
+    testImplementation project (":core-data")
+    androidTestImplementation project (":core-data")
+
+
 }
