저장 방식을 로컬메모리에서 로컬db로 변경

--- a/core-data/build.gradle
+++ b/core-data/build.gradle
@@ -46,5 +46,11 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
+    //room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
     compileOnly project(":core-model")
 }
