--- a/.github/workflows/deploy_to_playstore.yml
+++ b/.github/workflows/deploy_to_playstore.yml
@@ -10,10 +10,10 @@ jobs:
     
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       
       - name: setup JDK 11
-      - uses: actions/setup-java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: 11.0.3
           
