--- a/.github/workflows/deploy_to_playstore.yml
+++ b/.github/workflows/deploy_to_playstore.yml
@@ -20,12 +20,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       
-      - name: Build with Gradle
-        run: ./gradlew build
-      
       - name: Build Release AAB
         id: buildRelease
-        run: ./gradlew buildRelease
+        run: ./gradlew app:bundleRelease
       
       - name: Sign AAB
         id: sign
