--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.2.0'
+        compose_version = '1.2.0-alpha07'
 
         coroutines_version = '1.6.3'
 
@@ -26,7 +26,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'org.jlleitschuh.gradle.ktlint' version "10.3.0" //ktlint
     id 'io.gitlab.arturbosch.detekt' version "1.21.0-RC2" //detekt
 }
