--- a/core-data/build.gradle
+++ b/core-data/build.gradle
@@ -14,6 +14,12 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        javaCompileOptions{
+            annotationProcessorOptions{
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -29,6 +35,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    sourceSets{
+        androidTest.assets.srcDirs += file("$projectDir/schemas".toString())
+    }
 }
 
 dependencies {
@@ -39,6 +49,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    androidTestImplementation "androidx.room:room-testing:2.4.3"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:$coroutines_version"
 
